Fix flag filter conversion by explicitly excluding non-selected flags